[package]
name = "hue-bt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
uuid = "1.3.0"
